@@ -36,7 +36,7 @@
 #ifdef CLEAR_PASS
 #define TABLE_LAYOUT "pw_name char(32) not null, \
 pw_domain char(96) not NULL, \
-pw_passwd char(40), \
+pw_passwd char(128), \
 pw_uid int, pw_gid int, \
 pw_gecos char(48), \
 pw_dir char(160), \
@@ -46,7 +46,7 @@ primary key (pw_name, pw_domain ) "
 #else
 #define TABLE_LAYOUT "pw_name char(32) not null, \
 pw_domain char(96) not null, \
-pw_passwd char(40), \
+pw_passwd char(128), \
 pw_uid int, pw_gid int, \
 pw_gecos char(48), \
 pw_dir char(160), \
@@ -56,7 +56,7 @@ primary key (pw_name, pw_domain ) "
 #else
 #ifdef CLEAR_PASS
 #define TABLE_LAYOUT "pw_name char(32) not null, \
-pw_passwd char(40), \
+pw_passwd char(128), \
 pw_uid int, pw_gid int, \
 pw_gecos char(48), \
 pw_dir char(160), \
@@ -65,7 +65,7 @@ pw_clear_passwd char(16), \
 primary key (pw_name ) "
 #else
 #define TABLE_LAYOUT "pw_name char(32) not null, \
-pw_passwd char(40), \
+pw_passwd char(128), \
 pw_uid int, pw_gid int, \
 pw_gecos char(48), \
 pw_dir char(160), \
